ADD : parsing color + texture

--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: tlegrand <tlegrand@student.42lyon.fr>      +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/11/08 14:39:06 by tlegrand          #+#    #+#              #
-#    Updated: 2023/05/06 22:18:25 by tlegrand         ###   ########.fr        #
+#    Updated: 2023/05/08 19:25:11 by tlegrand         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -19,7 +19,7 @@ NAME		=	libft.a
 
 #	==============================	SOURCES	==============================	#
 DIR_SRCS	=	srcs/
-LST_SRCS	= 	ft_isalpha.c ft_isdigit.c ft_isalnum.c ft_isprint.c ft_isascii.c \
+LST_SRCS	= 	ft_isalpha.c ft_isdigit.c ft_isalnum.c ft_isprint.c ft_isascii.c ft_isspace.c\
 				ft_toupper.c ft_tolower.c ft_atoi.c \
 				ft_strchr.c ft_strrchr.c ft_strnstr.c ft_strncmp.c ft_strlen.c \
 				ft_strdup.c ft_calloc.c ft_strlcpy.c ft_strlcat.c \
